# smpl

./: .gitignore  README.md  feature-keys.md  pyproject.toml  spec.md
.dev/: fanout-analysis.md  fanout-heavy-workflow.js  fanout-heavy.md
.github/workflows/: ci.yml  pages.yml
docs/: index.html  make_assets.sh  style.css
rust/smpl-native/: Cargo.toml  pyproject.toml
rust/smpl-native/src/: lib.rs
tests/e2e/: make_fixtures.py  run_e2e.sh
tools/smpl-cloud/: pyproject.toml
tools/smpl-cloud/src/smpl_cloud/: __init__.py  backends.py  cli.py
tools/smpl-embed/: pyproject.toml
tools/smpl-embed/src/smpl_embed/: __init__.py  backends.py  cli.py
tools/smpl-gen/: pyproject.toml
tools/smpl-gen/src/smpl_gen/: __init__.py  backends.py  cli.py
tools/smpl-midi/: pyproject.toml
tools/smpl-midi/src/smpl_midi/: __init__.py  backends.py  cli.py
tools/smpl-stems/: pyproject.toml
tools/smpl-stems/src/smpl_stems/: __init__.py  backends.py  cli.py
tools/smpl-synth/: pyproject.toml
tools/smpl-synth/src/smpl_synth/: __init__.py  backends.py  cli.py
tools/smpl-transcribe/: pyproject.toml
tools/smpl-transcribe/src/smpl_transcribe/: __init__.py  backends.py  cli.py
