[project]
name = "smpl-embed"
version = "0.1.0"
description = "smpl embed / smpl index — audio embeddings (MERT/CLAP) + FAISS similarity index. Heavy ML (transformers) and faiss isolated in their OWN venv; the default install is light and degrades to a clean `unsupported` error frame when the heavy deps/weights are missing, so the two-tier model and the vector-frame contract work out of the box."
requires-python = ">=3.10"
dependencies = [
    "smplstream",
    "numpy>=1.24",
    "soundfile>=0.12",
]

# Two-tier proof: this tool is installed via its OWN `uv tool install ./tools/smpl-embed`
# into an isolated venv (NOT the core workspace), and discovered on PATH as `smpl-embed`,
# reachable through `smpl embed` and `smpl index`. The heavy ML stack (torch + transformers
# for MERT/CLAP) and faiss add HERE without ever touching the core lockfile.
[project.scripts]
smpl-embed = "smpl_embed.cli:main"

[project.optional-dependencies]
# Real embedding models live behind a `torch` extra; the FAISS index behind `faiss`.
# Default install pulls NEITHER, so `smpl embed`/`smpl index` run light and emit a clean
# `unsupported` error frame (+ a stderr install hint) until the user opts in.
torch = ["torch>=2.2", "transformers>=4.40", "torchaudio>=2.2"]
faiss = ["faiss-cpu>=1.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smpl_embed"]

# Resolve the unpublished core package from the monorepo for the isolated install.
[tool.uv.sources]
smplstream = { path = "../../packages/smplstream", editable = true }
