[project]
name = "smpl-stems"
version = "0.1.0"
description = "smpl stems — source separation (1→many filter). Splits one audio frame into N stem frames (drums/bass/vocals/other/guitar/piano). The heavy separator (Demucs via python-audio-separator) is isolated in this tool's OWN venv; the default install is light and degrades to a clean `unsupported` error frame when the separator is absent."
requires-python = ">=3.10"
dependencies = [
    "smplstream",
    "soundfile>=0.12",
]

# Two-tier proof: this tool is installed via its OWN `uv tool install ./tools/smpl-stems`
# into an isolated venv (NOT the core workspace), and discovered on PATH as `smpl-stems`,
# reachable through `smpl stems`. The heavy separator (torch + demucs) adds HERE without
# ever touching the core lockfile.
[project.scripts]
smpl-stems = "smpl_stems.cli:main"

[project.optional-dependencies]
# The real separator lives behind an extra so the default install stays light.
# `python-audio-separator` pulls torch + the htdemucs weights; never imported at module top.
torch = ["audio-separator>=0.28", "torch>=2.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smpl_stems"]

# Resolve the unpublished core package from the monorepo for the isolated install.
[tool.uv.sources]
smplstream = { path = "../../packages/smplstream", editable = true }
