[project]
name = "smpl-transcribe"
version = "0.1.0"
description = "smpl transcribe — Whisper speech/lyrics transcription (filter tool). Heavy ML (openai-whisper) isolated in its OWN venv; the default install is light and degrades cleanly (unsupported frame + install hint) when Whisper is absent. The srt/lrc/vtt exporters work on already-produced marker frames with NO heavy dep."
requires-python = ">=3.10"
dependencies = [
    "smplstream",
]

# Two-tier proof: this tool is installed via its OWN `uv tool install ./tools/smpl-transcribe`
# into an isolated venv (NOT the core workspace), and discovered on PATH as `smpl-transcribe`,
# reachable through `smpl transcribe`. The Whisper backend adds torch HERE (behind the
# `whisper` extra) without ever touching the core lockfile.
[project.scripts]
smpl-transcribe = "smpl_transcribe.cli:main"

[project.optional-dependencies]
# The real ASR backend lives behind an extra so the default install stays light.
# `uv tool install 'smpl-transcribe[whisper]'`
whisper = ["openai-whisper>=20231117"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smpl_transcribe"]

# Resolve the unpublished core package from the monorepo for the isolated install.
[tool.uv.sources]
smplstream = { path = "../../packages/smplstream", editable = true }
